--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -21,13 +21,13 @@
   //     "bucket_name": "my-bucket"
   //   }
   // ],
-  // "d1_databases": [
-  //   {
-  //     "binding": "MY_DB",
-  //     "database_name": "my-database",
-  //     "database_id": ""
-  //   }
-  // ],
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "tokurondb",
+      "database_id": "a3c64943-b9e6-4081-80cb-8ddfe76315b2"
+    }
+  ],
   // "ai": {
   //   "binding": "AI"
   // },
